don't abort tests just because there's no tool for linux capabilities
Tests now run fine on mac too, at least the ones without chroot. I'm not
sure how to get the rest going, setting setuid on iceccd causes various
permissions problems.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -8,10 +8,10 @@ test-strict:
 test-prepare:
 	if test -x /sbin/setcap; then \
 	    sudo /sbin/setcap cap_sys_chroot+ep ${sbindir}/iceccd ; \
-	elif which filecap >/dev/null 2>/dev/null; then \
+	elif command -v filecap >/dev/null 2>/dev/null; then \
 	    sudo filecap ${sbindir}/iceccd sys_chroot ; \
 	else \
-	    exit 1 ; \
+	    true ; \
 	fi
 
 test-full: test-prepare
