--- a/client/icecc-create-env.in
+++ b/client/icecc-create-env.in
@@ -309,7 +309,7 @@ if test -n "$clang"; then
 
     # clang always uses its internal .h files
     clangincludes=$(dirname $($added_clang -print-file-name=include/limits.h))
-    clangprefix=$(dirname $(dirname $added_clang))
+    clangprefix=$(dirname $(dirname $(abs_path $added_clang)))
     for file in $(find $clangincludes -type f); do
       # get path without ..
       # readlink is not portable enough.
