--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ matrix:
   - os: osx
     before_install:
       - brew update
-      - brew install lzo docbook2x
+      - brew install lzo docbook2x gdb ccache
   - os: linux
     sudo: true # for setcap so we can run the tests in chroot.
     compiler: clang
