icecc-test-env: Add environment test script
A helpful environment test script which can be used to find problems
with an environment before sending it over to a remote node

Signed-off-by: Joshua Watt <JPEWhacker@gmail.com>

--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = icecc
-bin_SCRIPTS = icecc-create-env
+bin_SCRIPTS = icecc-create-env icecc-test-env
 
 noinst_LIBRARIES = libclient.a
 libclient_a_SOURCES = \
