require C++11 to build icecc
We can modernise the icecc codebase a bit now that icecc 1.1 has
been released.

GCC >= 4.8 and Clang >= 3.3 officially support C++11. Most currently
supported Linux distribution releases either have such a compiler by
default, or as an optional install:

Ubuntu 14.04 LTS has GCC 4.9
Ubuntu 16.04 LTS has GCC 5.3
Debian Stretch has GCC 6.3
openSUSE Leap 42.2 has GCC 6.1.1
Red Hat Enterprise Linux 6 has a "Red Hat Developer Toolset" backport of GCC 6.2
SUSE Linux Enterprise 11 SP4 has an optional GCC 5.2 toolchain

Resolves #353

--- a/configure.ac
+++ b/configure.ac
@@ -25,6 +25,8 @@ AM_INIT_AUTOMAKE([1.11 foreign dist-bzip2])
 AM_SILENT_RULES([yes])
 AC_LANG([C++])
 
+CXXFLAGS="-std=c++11 $CXXFLAGS"
+
 # ===========================
 # Find required base packages
 # ===========================
