make travis also run 'make dist'
I.e. create the distribution tarball.

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ script:
             fi
             make test${strict} TESTCC=clang TESTCXX=clang++
         fi
+        make dist
 
 matrix:
   include:
