Fix warning printed when /lib or /lib64 are symlinks
icecc-create-env was printing:
[...]
adding file /usr/bin/objcopy
adding file /etc/ld.so.conf=/tmp/icecc_ld_so_confTsSNqs
cp: -r not specified; omitting directory '/lib'
cp: -r not specified; omitting directory '/lib64'
creating d7801039695fbb794e026bdaf287276c.tar.gz

The -p option means to preserve ownership, timestamps, etc., but doesn't
tell cp to operate on the symlink itself. The -P option does.

--- a/client/icecc-create-env.in
+++ b/client/icecc-create-env.in
@@ -452,7 +452,7 @@ fi
 
 # special case for weird multilib setups
 for dir in /lib /lib64 /usr/lib /usr/lib64; do
-    test -L $dir && cp -p $dir $tempdir$dir
+    test -L $dir && cp -Pp $dir $tempdir$dir
 done
 
 new_target_files=
