Switch travis to Ubuntu 16.04
It's only 2 and a half years old now.

The Address and Leak sanitisers are broken on this OS, so I've just
disabled them. Commit cdb7ea78868c4c58e1acba7a925a4af14b566c22 had
already switched to a set of deprecated Ubuntu machines, so they were
already on borrowed time.

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,11 +33,11 @@ matrix:
   - os: linux
     sudo: true # for setcap so we can run the tests in chroot.
     compiler: gcc
-    dist: trusty
+    dist: xenial
   - os: linux
     sudo: true # for setcap so we can run the tests in chroot.
     compiler: clang
-    dist: trusty
+    dist: xenial
   - os: osx
     before_install:
       - brew update
@@ -46,25 +46,25 @@ matrix:
     sudo: true # for setcap so we can run the tests in chroot.
     compiler: clang
     env: VALGRIND=1
-    dist: trusty
-  - os: linux
-    sudo: true # for setcap so we can run the tests in chroot.
-    compiler: clang
-    env: BUILD_TYPE=asan
-    dist: trusty
-    # Sanitizer builds with newer travis fail for unknown reason without giving any message.
-    group: deprecated-2017Q4
-  - os: linux
-    sudo: true # for setcap so we can run the tests in chroot.
-    compiler: clang
-    env: BUILD_TYPE=lsan
-    dist: trusty
-    group: deprecated-2017Q4
+    dist: xenial
+# - os: linux
+#   sudo: true # for setcap so we can run the tests in chroot.
+#   compiler: clang
+#   env: BUILD_TYPE=asan
+#   dist: xenial
+#   # Sanitizer builds with newer travis fail for unknown reason without giving y message.
+#   group: deprecated-2017Q4
+# - os: linux
+#   sudo: true # for setcap so we can run the tests in chroot.
+#   compiler: clang
+#   env: BUILD_TYPE=lsan
+#   dist: xenial
+#   group: deprecated-2017Q4
   - os: linux
     sudo: true # for setcap so we can run the tests in chroot.
     compiler: clang
     env: BUILD_TYPE=ubsan
-    dist: trusty
+    dist: xenial
   allow_failures:
 
 before_script:
